--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 # site properties and page defaults
 title: CreAI-Lab
 subtitle: 
-description: An engaging 1-3 sentence description of your lab.
+description: Research into the creativity and intelligence of AI.
 header: images/background.jpg
 footer: images/background.jpg
 proofer: false
