--- a/_config.yaml
+++ b/_config.yaml
@@ -10,7 +10,7 @@ proofer: false
 links:
   email: c.stevenson@uva.nl
   orcid: 0000-0001-8713-9213
-  google-scholar: https://scholar.google.nl/citations?hl=nl&user=nmT-EaUAAAAJ
+  google-scholar: nmT-EaUAAAAJ
   github: CreAI-Lab
   twitter: CreAI-Lab
   youtube: CreAI-Lab
