--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,3 +1,24 @@
+- title: Creativity of AI
+  group: featured
+  image: /images/creativity-ai.jpg  # Replace with your actual image path
+  description: Investigating if artificial intelligence can generate creative outputs. Participate in our experiment.
+  link: /projects/creativity-of-ai  # Replace with real URL
+
+- title: Bongard Problems
+  group: featured
+  image: /images/bongard.jpg  # Replace with your actual image path
+  description: Investigating the visual reasoning abilities of AI. Solve some classic Bongard problems.
+  link: /projects/bongard-problems  # Replace with real URL
+
+- title: Letterstring Analogies
+  group: featured
+  image: /images/letterstrings.jpg  # Replace with your actual image path
+  description: Can AI do analogical reasoning? Participate in analogy-solving tasks using letterstrings.
+  link: /projects/letterstrings  # Replace with real URL
+
+
+
+# original projects of the template
 - title: Cool Dataset
   subtitle: a subtitle
   group: featured
