--- a/_data/orcid.yaml
+++ b/_data/orcid.yaml
@@ -1,3 +1,5 @@
 - orcid: 0000-0003-1797-9836
-#  claire-stevenson: true
+  claire-stevenson: true
 
+- orcid: 0000-0003-1071-6750
+  tamar-johnson: true
