--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -2,5 +2,23 @@
 - id: arXiv:2502.05999
 - id: arXiv:2411.02348
 - id: arXiv:2411.02316
+- id: arXiv:2405.00899
+- id: arXiv:2403.09734
+- id: arXiv:2311.08083
+- id: arXiv:2310.20384
+- id: arXiv:2206.08932
 
+
+- id: arXiv:2403.09734
+- id: arXiv:2503.03666
+- id: arXiv:2404.18772
+
+
+
+- id: doi:10.1037/aca0000725
+- id: doi:10.1017/S0140525X23003497
+- id: doi:10.1037/aca0000618
+- id: doi:10.1037/xlm0001177
+- id: doi:10.1016/j.intell.2021.101548
+- id: doi:10.3390/jintelligence9010009
 
