--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -47,23 +47,23 @@
     - Claire Stevenson
     - Michel RV Chaudron
   conference: EduSymp@ MoDELS
-  date: 2013
+  date: 2013-1-1
   link: https://homepages.inf.ed.ac.uk/perdita/EduSymp/edusymp2013_submission_8.pdf
-- title: Computer or paper analogy puzzles; Does assessment mode influence young children's strategy progression?
+- title: Computer or paper analogy puzzles. Does assessment mode influence young children's strategy progression?
   authors:
     - Claire E Stevenson
     - Kirsten WJ Touw
     - Wilma Resing
   publisher: British Psychological Society
-  date: 2011
+  date: 2011-1-1
   link: https://psycnet.apa.org/record/2011-16938-006
-- title: Analogical reasoning skill acquisition with self-explanation in 7–8 year olds; Does feedback help?
+- title: Analogical reasoning skill acquisition with self-explanation in 7–8 year olds. Does feedback help?
   authors:
     - Claire E Stevenson
     - Wilma Resing
     - Mandy N. Froma
   publisher: Educational and Child Psychology
-  date: 2009
+  date: 2009-1-1
   link: https://www.researchgate.net/profile/Claire-Stevenson-4/publication/291879839_Analogical_reasoning_skill_acquisition_with_self-explanation_in_7-to_8-year-olds_Does_feedback_help/links/5971d474aca2721b09791f4a/Analogical-reasoning-skill-acquisition-with-self-explanation-in-7-to-8-year-olds-Does-feedback-help.pdf
 #gustaws articles
 - id: arXiv:2403.09734
