--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -1,8 +1,7 @@
 - title: Creativity of AI
   group: featured
   image: /images/creative-ai.png  # Replace with your actual image path
-  description: Can AI generate creative output?
-  Participate in our experiment!
+  description: Can AI generate creative output? Participate in our experiment!
   link: /projects/creativity-of-ai  # Replace with real URL
   tags:
     - infographic
@@ -12,8 +11,7 @@
 - title: Bongard Problems
   group: featured
   image: /images/bongard.jpg  # Replace with your actual image path
-  description: Can AI answer Bongard Problems correctly? 
-  Solve some classic Bongard problems yourself!
+  description: Can AI answer Bongard Problems correctly? Solve some classic Bongard problems yourself!
   link: /projects/bongard-problems  # Replace with real URL
   tags:
     - infographic
@@ -22,8 +20,7 @@
 - title: Letterstring Analogies
   group: featured
   image: /images/letterstrings.jpg  # Replace with your actual image path
-  description: Can AI do analogical reasoning? 
-  Participate in analogy-solving tasks using letterstrings!
+  description: Can AI do analogical reasoning? Participate in analogy-solving tasks using letterstrings!
   link: /projects/letterstrings  # Replace with real URL
   tags:
     - infographic
