--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,4 +1,10 @@
 # Claire's articles
+- id: doi: 10.1016/j.intell.2025.101975
+- id: doi: 10.48550/arXiv.2509.09381
+- id: doi: 10.48550/arXiv.2508.10057
+- id: doi: 10.18653/v1/2025.conll-1.40
+
+
 - id: arXiv:2503.03666
 - id: arXiv:2502.05999
 - id: arXiv:2411.02348
